crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__parser__parses_function_extension_receiver.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
fun String.surrounded(prefix: String, suffix: String): String =
    prefix + this + suffix

fun PsiElement?.containsNewline(): Boolean = textContains('\n')

fun com.example.Scope.renderQualified(): String = toString()

fun MutableMap<String, Expression<*>>.record(key: String, value: Expression<*>) {
    put(key, value)
}

syntax:
syntax:
KotlinFile
  AnnotationList
  ImportDirectiveList
  KotlinFileItemList
    FunctionDeclaration
      ModifierList
      ModifierList
      FunKw "fun" @ 0..3 trailing=[Whitespace " "]
      ModifierList
      CallableName
        CallableNamePartList
          TypeReference
            UserType
              UserTypeSegmentList
                Identifier "String" @ 4..10
          Dot "." @ 10..11
          Name
            Identifier "surrounded" @ 11..21
      ValueParameterList
        LParen "(" @ 21..22
        ValueParameterSeparatedList
          ValueParameter
            ModifierList
            Name
              Identifier "prefix" @ 22..28
            Colon ":" @ 28..29 trailing=[Whitespace " "]
            TypeReference
              UserType
                UserTypeSegmentList
                  Identifier "String" @ 30..36
          Comma "," @ 36..37 trailing=[Whitespace " "]
          ValueParameter
            ModifierList
            Name
              Identifier "suffix" @ 38..44
            Colon ":" @ 44..45 trailing=[Whitespace " "]
            TypeReference
              UserType
                UserTypeSegmentList
                  Identifier "String" @ 46..52
        RParen ")" @ 52..53
      Colon ":" @ 53..54 trailing=[Whitespace " "]
      TypeReference
        UserType
          UserTypeSegmentList
            Identifier "String" @ 55..61 trailing=[Whitespace " "]
      Assign "=" @ 62..63
      BinaryExpression
        BinaryExpression
          NameExpression
            Identifier "prefix" @ 68..74 leading=[Newline "\n", Whitespace "    "] trailing=[Whitespace " "]
          Plus "+" @ 75..76 trailing=[Whitespace " "]
          ThisExpression
            ThisKw "this" @ 77..81 trailing=[Whitespace " "]
        Plus "+" @ 82..83 trailing=[Whitespace " "]
        NameExpression
          Identifier "suffix" @ 84..90
    FunctionDeclaration
      ModifierList
      ModifierList
      FunKw "fun" @ 92..95 leading=[Newline "\n", Newline "\n"] trailing=[Whitespace " "]
      ModifierList
      CallableName
        CallableNamePartList
          TypeReference
            NullableType
              UserType
                UserTypeSegmentList
                  Identifier "PsiElement" @ 96..106
              Question "?" @ 106..107
          Dot "." @ 107..108
          Name
            Identifier "containsNewline" @ 108..123
      ValueParameterList
        LParen "(" @ 123..124
        ValueParameterSeparatedList
        RParen ")" @ 124..125
      Colon ":" @ 125..126 trailing=[Whitespace " "]
      TypeReference
        UserType
          UserTypeSegmentList
            Identifier "Boolean" @ 127..134 trailing=[Whitespace " "]
      Assign "=" @ 135..136 trailing=[Whitespace " "]
      CallExpression
        NameExpression
          Identifier "textContains" @ 137..149
        TypeArgumentListList
        ValueArgumentList
          LParen "(" @ 149..150
          ValueArgumentEntryList
            ValueArgument
              ValueArgumentPrefixList
              LiteralExpression
                CharacterLiteral "'\\n'" @ 150..154
          RParen ")" @ 154..155
        LambdaExpressionList
    FunctionDeclaration
      ModifierList
      ModifierList
      FunKw "fun" @ 157..160 leading=[Newline "\n", Newline "\n"] trailing=[Whitespace " "]
      ModifierList
      CallableName
        CallableNamePartList
          TypeReference
            UserType
              UserTypeSegmentList
                Identifier "com" @ 161..164
                Dot "." @ 164..165
                Identifier "example" @ 165..172
                Dot "." @ 172..173
                Identifier "Scope" @ 173..178
          Dot "." @ 178..179
          Name
            Identifier "renderQualified" @ 179..194
      ValueParameterList
        LParen "(" @ 194..195
        ValueParameterSeparatedList
        RParen ")" @ 195..196
      Colon ":" @ 196..197 trailing=[Whitespace " "]
      TypeReference
        UserType
          UserTypeSegmentList
            Identifier "String" @ 198..204 trailing=[Whitespace " "]
      Assign "=" @ 205..206 trailing=[Whitespace " "]
      CallExpression
        NameExpression
          Identifier "toString" @ 207..215
        TypeArgumentListList
        ValueArgumentList
          LParen "(" @ 215..216
          ValueArgumentEntryList
          RParen ")" @ 216..217
        LambdaExpressionList
    FunctionDeclaration
      ModifierList
      ModifierList
      FunKw "fun" @ 219..222 leading=[Newline "\n", Newline "\n"] trailing=[Whitespace " "]
      ModifierList
      CallableName
        CallableNamePartList
          TypeReference
            UserType
              UserTypeSegmentList
                Identifier "MutableMap" @ 223..233
                TypeArgumentList
                  Lt "<" @ 233..234
                  TypeProjectionList
                    TypeProjectionSeparatedList
                      TypeArgument
                        TypeProjection
                          TypeReference
                            UserType
                              UserTypeSegmentList
                                Identifier "String" @ 234..240
                      Comma "," @ 240..241 trailing=[Whitespace " "]
                      TypeArgument
                        TypeProjection
                          TypeReference
                            UserType
                              UserTypeSegmentList
                                Identifier "Expression" @ 242..252
                                TypeArgumentList
                                  Lt "<" @ 252..253
                                  TypeProjectionList
                                    TypeProjectionSeparatedList
                                      TypeArgument
                                        TypeProjection
                                          Star "*" @ 253..254
                                  Gt ">" @ 254..255
                  Gt ">" @ 255..256
          Dot "." @ 256..257
          Name
            Identifier "record" @ 257..263
      ValueParameterList
        LParen "(" @ 263..264
        ValueParameterSeparatedList
          ValueParameter
            ModifierList
            Name
              Identifier "key" @ 264..267
            Colon ":" @ 267..268 trailing=[Whitespace " "]
            TypeReference
              UserType
                UserTypeSegmentList
                  Identifier "String" @ 269..275
          Comma "," @ 275..276 trailing=[Whitespace " "]
          ValueParameter
            ModifierList
            Name
              Identifier "value" @ 277..282
            Colon ":" @ 282..283 trailing=[Whitespace " "]
            TypeReference
              UserType
                UserTypeSegmentList
                  Identifier "Expression" @ 284..294
                  TypeArgumentList
                    Lt "<" @ 294..295
                    TypeProjectionList
                      TypeProjectionSeparatedList
                        TypeArgument
                          TypeProjection
                            Star "*" @ 295..296
                    Gt ">" @ 296..297
        RParen ")" @ 297..298 trailing=[Whitespace " "]
      Block
        LBrace "{" @ 299..300
        BlockItemList
          Statement
            ExpressionStatement
              CallExpression
                NameExpression
                  Identifier "put" @ 305..308 leading=[Newline "\n", Whitespace "    "]
                TypeArgumentListList
                ValueArgumentList
                  LParen "(" @ 308..309
                  ValueArgumentEntryList
                    ValueArgument
                      ValueArgumentPrefixList
                      NameExpression
                        Identifier "key" @ 309..312
                    Comma "," @ 312..313 trailing=[Whitespace " "]
                    ValueArgument
                      ValueArgumentPrefixList
                      NameExpression
                        Identifier "value" @ 314..319
                  RParen ")" @ 319..320
                LambdaExpressionList
            TerminatorList
        RBrace "}" @ 321..322 leading=[Newline "\n"]
  Eof "" @ 323..323 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
