crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__parser__parses_function_top_level_and_block_body.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
fun sum(left: Int, right: Int): Int {
    return left + right
}

fun value(): Int {
    return 0
}

syntax:
syntax:
KotlinFile
  AnnotationList
  KotlinFileItemList
    FunctionDeclaration
      ModifierList
      ModifierList
      FunKw "fun" @ 0..3 trailing=[Whitespace " "]
      ModifierList
      Name
        Identifier "sum" @ 4..7
      ValueParameterList
        LParen "(" @ 7..8
        ValueParameterSeparatedList
          ValueParameter
            ModifierList
            Name
              Identifier "left" @ 8..12
            Colon ":" @ 12..13 trailing=[Whitespace " "]
            TypeReference
              UserType
                UserTypeSegmentList
                  UserTypeSegment
                    AnnotationList
                    Name
                      Identifier "Int" @ 14..17
          Comma "," @ 17..18 trailing=[Whitespace " "]
          ValueParameter
            ModifierList
            Name
              Identifier "right" @ 19..24
            Colon ":" @ 24..25 trailing=[Whitespace " "]
            TypeReference
              UserType
                UserTypeSegmentList
                  UserTypeSegment
                    AnnotationList
                    Name
                      Identifier "Int" @ 26..29
        RParen ")" @ 29..30
      Colon ":" @ 30..31 trailing=[Whitespace " "]
      TypeReference
        UserType
          UserTypeSegmentList
            UserTypeSegment
              AnnotationList
              Name
                Identifier "Int" @ 32..35 trailing=[Whitespace " "]
      BlockBody
        Block
          LBrace "{" @ 36..37
          BlockItemList
            Statement
              ExpressionStatement
                JumpExpression
                  ReturnKw "return" @ 42..48 leading=[Newline "\n", Whitespace "    "] trailing=[Whitespace " "]
                  BinaryExpression
                    NameExpression
                      Identifier "left" @ 49..53 trailing=[Whitespace " "]
                    Plus "+" @ 54..55 trailing=[Whitespace " "]
                    NameExpression
                      Identifier "right" @ 56..61
              TerminatorList
          RBrace "}" @ 62..63 leading=[Newline "\n"]
    FunctionDeclaration
      ModifierList
      ModifierList
      FunKw "fun" @ 65..68 leading=[Newline "\n", Newline "\n"] trailing=[Whitespace " "]
      ModifierList
      Name
        Identifier "value" @ 69..74
      ValueParameterList
        LParen "(" @ 74..75
        ValueParameterSeparatedList
        RParen ")" @ 75..76
      Colon ":" @ 76..77 trailing=[Whitespace " "]
      TypeReference
        UserType
          UserTypeSegmentList
            UserTypeSegment
              AnnotationList
              Name
                Identifier "Int" @ 78..81 trailing=[Whitespace " "]
      BlockBody
        Block
          LBrace "{" @ 82..83
          BlockItemList
            Statement
              ExpressionStatement
                JumpExpression
                  ReturnKw "return" @ 88..94 leading=[Newline "\n", Whitespace "    "] trailing=[Whitespace " "]
                  LiteralExpression
                    IntegerLiteral "0" @ 95..96
              TerminatorList
          RBrace "}" @ 97..98 leading=[Newline "\n"]
  Eof "" @ 99..99 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
