crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__parser__parses_import_qualified_members.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
package samples.imports

import kotlin.time.Duration.Companion.seconds

val timeout = 5.seconds

syntax:
syntax:
KotlinFile
  PackageHeader
    PackageKw "package" @ 0..7 trailing=[Whitespace " "]
    QualifiedName
      Name
        Identifier "samples" @ 8..15
      Dot "." @ 15..16
      Name
        Identifier "imports" @ 16..23
  ImportList
    ImportDirective
      Identifier "import" @ 25..31 leading=[Newline "\n", Newline "\n"] trailing=[Whitespace " "]
      QualifiedName
        Name
          Identifier "kotlin" @ 32..38
        Dot "." @ 38..39
        Name
          Identifier "time" @ 39..43
        Dot "." @ 43..44
        Name
          Identifier "Duration" @ 44..52
        Dot "." @ 52..53
        Name
          Identifier "Companion" @ 53..62
        Dot "." @ 62..63
        Name
          Identifier "seconds" @ 63..70
  PropertyDeclaration
    ValKw "val" @ 72..75 leading=[Newline "\n", Newline "\n"] trailing=[Whitespace " "]
    CallableName
      Name
        Identifier "timeout" @ 76..83 trailing=[Whitespace " "]
    Assign "=" @ 84..85 trailing=[Whitespace " "]
    NavigationExpression
      LiteralExpression
        IntegerLiteral "5" @ 86..87
      Dot "." @ 87..88
      Identifier "seconds" @ 88..95
  Eof "" @ 96..96 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
