crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__parser__parses_import_star.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
package samples.imports

import kotlin.collections.*

class StarImport(val names: List<String>)

syntax:
syntax:
KotlinFile
  AnnotationList
  KotlinFileItemList
    PackageHeader
      PackageKw "package" @ 0..7 trailing=[Whitespace " "]
      QualifiedName
        QualifiedNameSegmentList
          Name
            Identifier "samples" @ 8..15
          Dot "." @ 15..16
          Name
            Identifier "imports" @ 16..23
      TerminatorList
    ImportDirectiveList
      ImportDirective
        Identifier "import" @ 25..31 leading=[Newline "\n", Newline "\n"] trailing=[Whitespace " "]
        QualifiedName
          QualifiedNameSegmentList
            Name
              Identifier "kotlin" @ 32..38
            Dot "." @ 38..39
            Name
              Identifier "collections" @ 39..50
        ImportOnDemandSuffix
          Dot "." @ 50..51
          Star "*" @ 51..52
        TerminatorList
    ClassDeclaration
      ModifierList
      ModifierList
      ClassKw "class" @ 54..59 leading=[Newline "\n", Newline "\n"] trailing=[Whitespace " "]
      Name
        Identifier "StarImport" @ 60..70
      PrimaryConstructor
        ModifierList
        ValueParameterList
          LParen "(" @ 70..71
          ValueParameterSeparatedList
            ValueParameter
              ModifierList
              ValKw "val" @ 71..74 trailing=[Whitespace " "]
              Name
                Identifier "names" @ 75..80
              Colon ":" @ 80..81 trailing=[Whitespace " "]
              TypeReference
                UserType
                  UserTypeSegmentList
                    UserTypeSegment
                      AnnotationList
                      Name
                        Identifier "List" @ 82..86
                      TypeArgumentList
                        Lt "<" @ 86..87
                        TypeProjectionSeparatedList
                          TypeReference
                            UserType
                              UserTypeSegmentList
                                UserTypeSegment
                                  AnnotationList
                                  Name
                                    Identifier "String" @ 87..93
                        Gt ">" @ 93..94
          RParen ")" @ 94..95
  Eof "" @ 96..96 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
